--- a/rocketstats/rocketstats/Base.lproj/LaunchScreen.storyboard
+++ b/rocketstats/rocketstats/Base.lproj/LaunchScreen.storyboard
@@ -17,14 +17,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="bij-qr-YqR">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="logo-white" translatesAutoresizingMaskIntoConstraints="NO" id="bij-qr-YqR">
                                 <rect key="frame" x="67" y="269" width="240" height="128"/>
                                 <accessibility key="accessibilityConfiguration">
                                     <accessibilityTraits key="traits" image="YES" notEnabled="YES"/>
                                 </accessibility>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.21084520462268325" green="0.48869724412262516" blue="0.70510848445595853" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="bij-qr-YqR" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="249" id="Lqd-U1-TE9"/>
                             <constraint firstItem="bij-qr-YqR" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="bm4-hl-FjH"/>
@@ -40,6 +40,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="logo" width="972" height="93"/>
+        <image name="logo-white" width="972" height="93"/>
     </resources>
 </document>
